# Codex-AI-presence-lab

./: .gitignore  README.md
live2d-avatar-runtime/: .gitignore  README.md  RUNTIME-MANIFEST.md  pyproject.toml
live2d-avatar-runtime/docs/: LIFECYCLE_POLICY.md  RENDERER-PERFORMANCE.md
live2d-avatar-runtime/profiles/: higan-live2d.json
live2d-avatar-runtime/scripts/: install-runtime.ps1  install-skill.ps1  live2d-avatar.sh  uninstall-runtime.ps1  uninstall-skill.ps1
live2d-avatar-runtime/tests/: test_package_data.py  test_runtime.py
presence-runtime/: README.md  RUNTIME-MANIFEST.md  pyproject.toml  runtime-manifest.json
presence-runtime/fixtures/: renderer-effective-v0.2.json
presence-runtime/renderer-host/: input_feedback.cjs  input_feedback.css  input_feedback.test.cjs  interaction_geometry.cjs  interaction_geometry.test.cjs  main.cjs  package-lock.json  package.json  preload.cjs  presentation_contract.cjs  presentation_contract.test.cjs  snapshot_contract.cjs  snapshot_contract.test.cjs  window_options.cjs  window_options.test.cjs  window_registry.cjs  window_registry.test.cjs
presence-runtime/schemas/: avatar-model-pack-v0.2.schema.json  effective-snapshot-v0.2.schema.json  override-patch-v0.2.schema.json  presence-profile-v0.2.schema.json  preset-v0.2.schema.json  registration-v0.2.schema.json  renderer-snapshot-v0.2.schema.json
presence-runtime/tests/: conftest.py  test_adapters.py  test_catalog.py  test_cli.py  test_control.py  test_controller.py  test_installer.py  test_lifecycle.py  test_migration.py  test_presentation.py  test_protocol.py  (+8 more)
(+185 files in other folders)
