[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "live2d-avatar-runtime"
version = "0.1.0"
description = "Local-only Live2D model import, manifest, state, and lifecycle controls for Codex avatars."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Local Codex workspace" }]
dependencies = []

[project.scripts]
live2d-avatar = "live2d_avatar.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
